--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,44 +1,61 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/ol.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/pure-min.css" type="text/css">
     <style>
       .map {
         height: 800px;
         width: 100%;
       }
     </style>
-    <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
+    <!-- <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script> -->
+    <script src="/static/js/jquery-3.4.1.min.js"></script>
+    <script src="/static/js/ol.js"></script>
     <script>
-      function add_map_point(lat, lng) {
+      function add_map_point(map, point, img=0) {
         var vectorLayer = new ol.layer.Vector({
           source:new ol.source.Vector({
                 features: [new ol.Feature({
-                      geometry: new ol.geom.Point(ol.proj.transform([parseFloat(lng), parseFloat(lat)], 'EPSG:4326', 'EPSG:3857')),})]
+                      geometry: new ol.geom.Point(point),})]
           }),
           style: new ol.style.Style({
                 image: new ol.style.Icon({anchor: [0.5, 0.5], anchorXUnits: "fraction", anchorYUnits: "fraction", 
-                        // src: "https://upload.wikimedia.org/wikipedia/commons/e/ec/RedDot.svg"})
-                          src: "https://img.icons8.com/color/48/000000/fiat-500.png"}) 
+                        src: img ? "https://img.icons8.com/dusk/64/000000/garage.png" : "https://img.icons8.com/color/48/000000/fiat-500.png"}) 
                         })
-        });
+          });
           map.addLayer(vectorLayer);
+        }
+
+        function addLines(map, loc, spot) {
+          var points = [loc, spot];
+          var featureLine = new ol.Feature({
+              geometry: new ol.geom.LineString(points)
+          });
+          var vectorLine = new ol.source.Vector({});
+          vectorLine.addFeature(featureLine);
+
+          var vectorLineLayer = new ol.layer.Vector({
+              source: vectorLine,
+              style: new ol.style.Style({
+                  fill: new ol.style.Fill({ color: '#00FF00', weight: 4 }),
+                  stroke: new ol.style.Stroke({ color: '#00FF00', width: 2 })
+              })
+          });
+
+          map.addLayer(vectorLineLayer);
         }
     </script>
     <title>Ego Parking Demo</title>
   </head>
   <body>
-    <h2>Demo</h2>
     <div id="map" class="map"></div>
     <script type="text/javascript">
       
-
       var view = new ol.View({
-          // center: ol.proj.fromLonLat([50.41, 1.82]),
-          center: [0, 0],
+          center: ol.proj.fromLonLat([50.41, 1.82]),
           zoom: 4
       });
-
       
       var map = new ol.Map({
         target: 'map',
@@ -50,13 +67,29 @@
         view: view
       });
       
-      var counts = {{locations|tojson}};
+      var locations = {{locations|tojson}};
+      var spots = {{spots|tojson}};
 
-      // add_map_point(50.7598133,5.9564425);  // aachen
-      counts.forEach(function(item) {
-        add_map_point(item[0], item[1]);
+      
+      var trans_locations = [];
+      var trans_spots = [];
+      // Locating cars
+      locations.forEach(function(item) {
+        var point = ol.proj.transform([parseFloat(item[0]), parseFloat(item[1])], 'EPSG:4326', 'EPSG:3857');
+        trans_locations.push(point)
+        add_map_point(map, point, 1);
+      });
+      // Showing free parking slots
+      spots.forEach(function(item) {
+        var point = ol.proj.transform([parseFloat(item[0]), parseFloat(item[1])], 'EPSG:4326', 'EPSG:3857');
+        trans_spots.push(point)
+        add_map_point(map, point, 0);
       });
 
+      // Free parking slots to be distributed
+      for (var i=0; i<10; i++){
+        addLines(map, trans_locations[i], trans_spots[i]);
+      }
 
     </script>
   </body>
